# wordfeud-ocr

./: .gitignore  Cargo.toml  README.md  TODO.md  stats.py  stats.txt
.cargo/: config.toml
examples/: collage.rs  load.rs  recognize.rs
lib/: Cargo.toml
lib/examples/: basic.rs  collage.rs  load.rs  recognize.rs
lib/src/: error.rs  layout.rs  lib.rs  recognizer.rs  utils.rs
lib/tests/: recognize.rs  screenshot_dutch.expect  screenshot_dutch_1.expect  screenshot_dutch_2.expect  screenshot_dutch_3.expect  screenshot_dutch_4.expect  screenshot_dutch_5.expect  screenshot_english.expect  screenshot_swedish.expect
pylib/: Cargo.toml  README.md  build-cross.sh  mypython  test.py
pylib/src/: lib.rs
src/: error.rs  layout.rs  lib.rs  recognizer.rs  segmenter.rs  test.rs  utils.rs
tests/: recognize.rs  screenshot_dutch.expect  screenshot_english.expect  screenshot_swedish.expect
